# chatsense

./: .gitignore  ARCHITECTURE_REVIEW.md  README.md  capacitor.config.ts  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  repomix.config.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  release-debug-apk.yml
android/app/: build.gradle
app/: globals.css  layout.tsx  page.tsx
components/analytics/: DataRow.tsx  InsightRow.tsx  MetricCard.tsx  MiniBars.tsx  NarrativeFindingRow.tsx  (+5 more)
contracts/: behavioral_contract.json  forecasting_contract.json  forecasting_report.schema.json  report.schema.json
docs/: agent-tooling.md  android-share-import-testing.md  architecture.md  data_contract.md  development.md  forecasting-methodology.md  forecasting-safety.md  forecasting-target-audit.md  insight-narrative.md  onboarding-import.md  privacy.md  react-native-file-import.md  react-native-incoming-share.md  react-native-migration-audit.md  relationship-dynamics.md  release-debug-apks.md  runtime_boundaries.md  shared-core-extraction.md  stage-2-coherence-report.md  stage-3-native-import-report.md  stage-4-relationship-dynamics-report.md  stage-5-forecasting-validation-report.md  stage-6-2-human-readable-takeaways-report.md  stage-6-evidence-backed-narrative-report.md  stage-8a-relationship-read-report.md
lib/: chat-analyzer.ts  chat-parser.ts  contract.ts  parity.ts
maestro/: chatsense-smoke.yaml
ml/: README.md  pyproject.toml
ml/chatsense_ml/: __init__.py  __main__.py  ask.py  features.py  ingest.py  moments.py  pipeline.py  schemas.py  sentiment.py  text.py  topics.py
ml/fixtures/: sample_chat.txt
ml/tests/: test_ingest.py  test_pipeline.py
mobile/: App.tsx  app.config.ts  package-lock.json  package.json
notebooks/: 01_timeline_features.ipynb  02_reply_dynamics.ipynb  03_temporal_graphs.ipynb  04_behavioral_windows.ipynb
scripts/: forecast-evaluate.ts
tests/: forecasting-parity.ts  forecasting.ts  human-takeaway.ts  import-boundaries.ts  insight-narrative.ts  onboarding.ts  parity.ts  relationship-dynamics.ts  relationship-read.ts
utils/: formatting.ts
(+154 files in other folders)
