[project]
name = "chatsense-ml"
version = "0.1.0"
description = "Local-first WhatsApp chat analytics and ML foundation for ChatSense."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
lab = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "sentence-transformers>=3.0",
]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
chatsense-ml = "chatsense_ml.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
